--- a/src/ui/background.css
+++ b/src/ui/background.css
@@ -3,8 +3,10 @@
     height:100vh;
     background-size:cover;
     padding:0 auto;
+
 }
 
+/*
 .map{
     width:100vw;
     position:absolute;
@@ -13,14 +15,21 @@
     left:50%;
     top:50%;
     transform: translate(-50%, -50%);
-    border:1px solid red;
+}
+*/
+
+.map{
+    width:100vw;
+    height:50.75vw;
+    background-size:cover;
+    position:relative;
+    margin:0px;
 }
 
 @media screen and (max-width:1000px) {
     .background{
-        display:flex;
-        flex-direction: column;
-        justify-content: space-evenly;
+        margin:0px;
+        padding:0px;
     }
     .space{
         height:25vh;
@@ -38,28 +47,10 @@
     }
 }
 
-.line {
-    position:absolute;
-    height:100%;
-    left: 50%;
-    color:red;
-    border-left: 1px solid red;
- }
-
-
-.line2 {
-    position:absolute;
-    top:50%;
-    width:100%;
-    color:red;
-    border-bottom: 1px solid red;
- }
-
  .map-box{
     position:absolute;
     top:4.2%;
     left:3.6%;
     width:90.9%;
     height:90.4%;
-    border:1px solid red;
  }
