--- a/src/ui/box.css
+++ b/src/ui/box.css
@@ -49,7 +49,9 @@
     .box{
         width:350px;
         height:250px;
-        align-self: center;
+        position:relative;
+        left:50%;
+        transform:translate(-50%,0);
     }
 }
 
